fix: make items aligned

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,6 @@ h1 {
 
 .select-custom {
     position: relative;
-    color: #444;
     border-radius: 0;
 }
 
@@ -422,7 +421,6 @@ h1 {
     padding: 12px 0;
     outline: none;
     color: #F5F5F5;
-    opacity: 1;
 }
 
 .input-item input::placeholder {
@@ -435,21 +433,12 @@ h1 {
     opacity: 0.5;
 }
 
-.input-item input[type=date] {
-    width: 100%;
+.date-img {
+    margin-right: 0 !important;
 }
 
-.input-item input[type=date]::-webkit-calendar-picker-indicator {
-    position: absolute;
-    left: 8%;
-    background-color: #fff;
-    border-radius: 50%;
-    /* opacity: 0; */
-    width: 15px;
-    height: 15px;
-    padding: 5px;
-    margin: 0;
-    margin-top: 4px;
+.input-item-date::-webkit-calendar-picker-indicator {
+    opacity: 0;
 }
 
 .input-item input[type=date]::-webkit-datetime-edit-fields-wrapper {
@@ -812,6 +801,7 @@ h1 {
 
     .input-item input::placeholder {
         color: #fff;
+        text-align: left;
     }
 
     .input-item .select-custom select {
